--- a/klan.html
+++ b/klan.html
@@ -12,17 +12,17 @@ table, tr, th, td{border: 1px solid;}
   <caption>FM 15 Klánliga-Tabella</caption>
   <thead>
     <tr>
-      <th>P</th>
-      <th>V</th>
-      <th colspan="2">Csapat</th>
-      <th>M</th>
-      <th>GY</th>
-      <th>D</th>
-      <th>V</th>
-      <th>RG</th>
-      <th>KG</th>
-      <th>GK</th>
-      <th>P</th>
+      <th scope="col">P</th>
+      <th scope="col">V</th>
+      <th scope="col" colspan="2">Csapat</th>
+      <th scope="col">M</th>
+      <th scope="col">GY</th>
+      <th scope="col">D</th>
+      <th scope="col">V</th>
+      <th scope="col">RG</th>
+      <th scope="col">KG</th>
+      <th scope="col">GK</th>
+      <th scope="col">P</th>
     </tr>
   </thead>
   <tbody>
