--- a/termek.html
+++ b/termek.html
@@ -11,58 +11,58 @@
 </head>
 <body>
 <table>
-  <thead>
-    <tr>
-      <th>Termék</th>
-      <th>1.né</th>
-      <th>2.né</th>
-      <th>Végösszeg</th>
-    </tr>
-  </thead>
-  <tbody>
-   <tr> 
-    <th>Csokoládé</th>
-    <td>74 460Ft</td>
-    <td>16 256Ft</td>
-    <td>90 716Ft</td>
-    </tr>
-    <tr>
-      <th>Gumimaci</th>
-      <td>507 960Ft</td>
-      <td>124 920Ft</td>
-      <td>632 880 Ft</td>
-    </tr>
-    <tr>
-      <th>Scottish Longbreads</th>
-      <td>126 750Ft</td>
-      <td>106 250Ft</td>
-      <td>233 000Ft</td>
-    </tr>
-    <tr>
-      <th>Sir Rodney's Scones</th>
-      <td>141 800Ft</td>
-      <td>75 600Ft</td>
-      <td>217 400Ft</td>
-    </tr>
-    <tr>
-      <th>Tarte au sucre</th>
-      <td>472 800Ft</td>
-      <td>454 792Ft</td>
-      <td>927 592Ft</td>
-    </tr>
-    <tr>
-      <th>Csokoládés keksz</th>
-      <td>94 389Ft</td>
-      <td>34 960Ft</td>
-      <td>129 349Ft</td>
-    </tr>
-    <tr>
-      <th>Összesen:</th>
-      <td>1 418 159Ft</td>
-      <td>812 778Ft</td>
-      <td>2 230 937Ft</td>
-    </tr>
-  </tbody>
+    	<th id="product" scope="col">Termék</th>
+	<th id="Q1" scope="col">1.né</th>
+	<th id="Q2" scope="col">2.né</th>
+	<th id="sum" scope="col">Végösszeg</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+	<th id="chocolate" scope="row">Csokoládé</th>
+	<td headers="chocolate Q1">74 460Ft</td>
+	<td headers="chocolate Q2">16 256Ft</td>
+	<td headers="chocolate sum">90 716Ft</td>
+	</tr>
+	<tr>
+	<th id="gummibear" scope="row">Gumimaci</th>
+	<td headers="gummibear Q1">507 960Ft</td>
+	<td headers="gummibear Q2">124 920Ft</td>
+	<td headers="gummibear sum">632 880 Ft</td>
+	</tr>
+	<tr>
+	<th id="longbread" scope="row">Scottish Longbreads</th>
+	<td headers="longbread Q1">126 750Ft</td>
+	<td headers="longbread Q2">106 250Ft</td>
+	<td headers="longbread sum">233 000Ft</td>
+	</tr>
+	<tr>
+	<th id="scones" scope="row">Sir Rodney's Scones</th>
+	<td headers="scones Q1">141 800Ft</td>
+	<td headers="scones Q2">75 600Ft</td>
+	<td headers="scones sum">217 400Ft</td>
+	</tr>
+	<tr>
+	<th id="tarte" scope="row">Tarte au sucre</th>
+	<td headers="tarte Q1">472 800Ft</td>
+	<td headers="tarte Q2">454 792Ft</td>
+	<td headers="tarte sum">927 592Ft</td>
+	</tr>
+	<tr>
+	<th id="chococookie" scope="row">Csokoládés keksz</th>
+	<td headers="chococookie Q1">94 389Ft</td>
+	<td headers="chococookie Q2">34 960Ft</td>
+	<td headers="chococookie sum">129 349Ft</td>
+	</tr>
+    </tbody>
+    <tfoot>
+        <tr>
+	<th id="rowsum" scope="row">Összesen:</th>
+	<td headers="rowsum Q1">1 418 159Ft</td>
+	<td headers="rowsum Q2">812 778Ft</td>
+        <td headers="rowsum sum">2 230 937Ft</td>
+	</tr>
+    </tfoot>
 </table>
 </body>
 </html>
