--- a/kemenysepro.html
+++ b/kemenysepro.html
@@ -25,7 +25,7 @@
   <tbody>
    <tr>
     <th id="wood" rowspan="2" scope="row">Fa -vagy széntüzelésű készülék</th>
-    <th id="szazhatvan" scope="col">&empty;160</th>
+    <th id="szazhatvan" headers="kemeny">&empty;160</th>
      <td headers="wood szazhatvan five">16</td>
      <td headers="wood szazhatvan six">18</td>
      <td headers="wood szazhatvan seven">20</td>
@@ -34,7 +34,7 @@
      <td headers="wood szazhatvan ten">25</td>
     </tr>
     <tr>
-      <th id="ketszaz" scope="col">&empty;200</th>
+      <th id="ketszaz" headers="kemeny">&empty;200</th>
       <td headers="wood ketszaz five">25</td>
       <td headers="wood ketszaz six">29</td>
       <td headers="wood ketszaz seven">33</td>
@@ -44,7 +44,7 @@
     </tr>
      <tr>
        <th id="notgas" rowspan="2" scope="row">Nem túlnyomásos gázkészülék(Kw)</th>
-       <th id="szazhatvan" scope="col">&empty;160</th>
+       <th id="szazhatvan" headers="kemeny">&empty;160</th>
        <td headers="notgas szazhatvan five">40</td>
        <td headers="notgas szazhatvan six">43</td>
        <td headers="notgas szazhatvan seven">46</td>
@@ -53,7 +53,7 @@
        <td headers="notgas szazhatvan ten">49</td>
     </tr>
     <tr>
-      <th id="ketszaz">&empty;200</th>
+      <th id="ketszaz" headers="kemeny">&empty;200</th>
       <td header="notgas ketszaz five">70</td>
       <td headers="notgas ketszaz six">75</td>
       <td headers="notgas ketszaz seven">80</td>
