--- a/familyguy.html
+++ b/familyguy.html
@@ -41,48 +41,48 @@ th,td
   <caption>Szereplők</caption>
   <thead>
   <tr>
-    <th>&empty;</th>
-    <th>Név</th>
-    <th>Leírás</th>
-    <th>Kép</th>
+    <th id="empty">&nbsp;</th>
+    <th id="name" scope="col">Név</th>
+    <th id="description" scope="col">Leírás</th>
+    <th id="picture" scope="col">Kép</th>
   </tr>
   </thead>
   <tbody>
    <tr>
-    <th>1</th>
-    <td>Peter Griffin</td>
-    <td class="other">Peter a negyvenes éveiben járó családfő, júliusban született. Rendkívül kövér és ostoba férfi, aki állandóan rossz helyzetekbe kerül, melyeket csak fokoz, ahogyan próbál kikerülni belőlük. Bár ez nem látszik rajta, éppen-hogy szellemi fogyatékos. Lois férje, Chris és Stewie apja, Brian gazdája. Apja utálja, anyjáról nem sokat tudni- vegasban szokott kártyázni.</td>
-    <td><img src="http://users.atw.hu/ffamilyguy/images/family_guy_peter_griffin.jpg" alt="Peter"></td>
+    <th id="one" scope="row" headers="empty">1</th>
+    <td headers="one name">Peter Griffin</td>
+    <td headers="one description" class="other">Peter a negyvenes éveiben járó családfő, júliusban született. Rendkívül kövér és ostoba férfi, aki állandóan rossz helyzetekbe kerül, melyeket csak fokoz, ahogyan próbál kikerülni belőlük. Bár ez nem látszik rajta, éppen-hogy szellemi fogyatékos. Lois férje, Chris és Stewie apja, Brian gazdája. Apja utálja, anyjáról nem sokat tudni- vegasban szokott kártyázni.</td>
+    <td headers="one picture"><img src="http://users.atw.hu/ffamilyguy/images/family_guy_peter_griffin.jpg" alt="Peter"></td>
   </tr>
   <tr>
-    <th>2</th>
-    <td>Lois Griffin</td>
-    <td class="other">Lois is a negyvenes éveiben jár. A módos Pewterschmidt családba született, de feladta gazdagságát, hogy hozzámehessen Peter-hez, bár azóta is nagy figyelmet fordít külső megjelenésének ápolására. Lois zongoraleckéket ad, de a legtöbb idejét a családdal való törődés teszi ki. Szomszédjuk, Glenn Quagmire folyamatosan zaklatja, és természetellenesen bálványozza őt.</td>
-    <td><img src="http://users.atw.hu/ffamilyguy/images/lois-griffin.png" alt="Lois"></td>        
+    <th id="two" scope="row" headers="empty">2</th>
+    <td headers="two name">Lois Griffin</td>
+    <td headers="two description" class="other">Lois is a negyvenes éveiben jár. A módos Pewterschmidt családba született, de feladta gazdagságát, hogy hozzámehessen Peter-hez, bár azóta is nagy figyelmet fordít külső megjelenésének ápolására. Lois zongoraleckéket ad, de a legtöbb idejét a családdal való törődés teszi ki. Szomszédjuk, Glenn Quagmire folyamatosan zaklatja, és természetellenesen bálványozza őt.</td>
+    <td headers="two picture"><img src="http://users.atw.hu/ffamilyguy/images/lois-griffin.png" alt="Lois"></td>        
   </tr>
   <tr>
-    <th>3</th>
-    <td>Meg Griffin</td>
-    <td class="other">Lois 17 éves lánya (valószínűleg nem Peter-től származik). Meg idejének nagy részében próbál beilleszkedni a gimnáziumának közösségébe, ami (plasztikai műtét nélkül) nem is nagyon sikerül neki. Gyarkan célpontja a külsejét, különcségét és úgy általában a létezését bíráló vicceknek.</td>
-    <td><img src="http://users.atw.hu/ffamilyguy/images/meg-griffin.jpg" alt="Meg"></td>
+    <th id="three" scope="row" headers="empty">3</th>
+    <td headers="three name">Meg Griffin</td>
+    <td headers="three description" class="other">Lois 17 éves lánya (valószínűleg nem Peter-től származik). Meg idejének nagy részében próbál beilleszkedni a gimnáziumának közösségébe, ami (plasztikai műtét nélkül) nem is nagyon sikerül neki. Gyarkan célpontja a külsejét, különcségét és úgy általában a létezését bíráló vicceknek.</td>
+    <td headers="three picture"><img src="http://users.atw.hu/ffamilyguy/images/meg-griffin.jpg" alt="Meg"></td>
   </tr>
   <tr>
-    <th>4</th>
-    <td>Chris Griffin</td>
-    <td class="other">Peter és Lois 14 éves fia. Nem túl okos (bár tehetségesen rajzol), és az apjához hasonlóan túlsúlyos. Ő az egyetlen gyerek, akinek még nem kérdőjelezték meg a szüleinek kilétét (bár egy lyukas óvszernek köszönhetően született meg). Egyes nézők szerint Chris idősebb a nővérénél, mert egy kissé magasabb, de ez nem igaz.</td>
-    <td><img src="http://users.atw.hu/ffamilyguy/images/family_guy_chris_griffin.jpg" alt="Chris"></td>
+    <th id="four" scope="row" headers="empty">4</th>
+    <td headers="four name">Chris Griffin</td>
+    <td headers="four description" class="other">Peter és Lois 14 éves fia. Nem túl okos (bár tehetségesen rajzol), és az apjához hasonlóan túlsúlyos. Ő az egyetlen gyerek, akinek még nem kérdőjelezték meg a szüleinek kilétét (bár egy lyukas óvszernek köszönhetően született meg). Egyes nézők szerint Chris idősebb a nővérénél, mert egy kissé magasabb, de ez nem igaz.</td>
+    <td headers="four picture"><img src="http://users.atw.hu/ffamilyguy/images/family_guy_chris_griffin.jpg" alt="Chris"></td>
   </tr>
   <tr>
-    <th>5</th>
-    <td>Stewie Griffin</td>
-    <td class="other">Peter és Lois 1 éves fia. Angol akcentussal beszél, hihetetlenül intelligens. A kormány számára ismeretlen veszélyt jelent a nemzetközi biztonságra, mert komoly terveket sző világuralomról és Lois megöléséről, ám tervei eddig meghiúsultak, mivel a körülötte lévők közül csak Brian (a kutya) érti meg és veszi komolyan. Sok vicc született a valószínűsíthető homoszexualitásáról, azonban sok epizódban heteroszexuális (a szexuális beállítottsága a készítők szerint a helyzet humorosságának megfelelően változik).</td>
-    <td><img src="http://users.atw.hu/ffamilyguy/images/400px-Stewiegriffin.jpg" alt="Stewie"></td>
+    <th id="five" scope="row" headers="empty">5</th>
+    <td headers="five name">Stewie Griffin</td>
+    <td headers="five description" class="other">Peter és Lois 1 éves fia. Angol akcentussal beszél, hihetetlenül intelligens. A kormány számára ismeretlen veszélyt jelent a nemzetközi biztonságra, mert komoly terveket sző világuralomról és Lois megöléséről, ám tervei eddig meghiúsultak, mivel a körülötte lévők közül csak Brian (a kutya) érti meg és veszi komolyan. Sok vicc született a valószínűsíthető homoszexualitásáról, azonban sok epizódban heteroszexuális (a szexuális beállítottsága a készítők szerint a helyzet humorosságának megfelelően változik).</td>
+    <td headers="five picture"><img src="http://users.atw.hu/ffamilyguy/images/400px-Stewiegriffin.jpg" alt="Stewie"></td>
   </tr>
   <tr>
-    <th>6</th>
-    <td>Brian Griffin</td>
-    <td class="other">A Griffin család beszélni képes talált kutyája, a család talán legintelligensebb tagja. Gyakran ironikusan beszél, Stewie-vel jó barátok, bár gyakran szekálják egymást.</td>
-    <td><img src="http://users.atw.hu/ffamilyguy/images/600full-brian-griffin.jpg" alt="Brian"></td>
+    <th id="six" scope="row" headers="empty">6</th>
+    <td headers="six name">Brian Griffin</td>
+    <td headers="six description" class="other">A Griffin család beszélni képes talált kutyája, a család talán legintelligensebb tagja. Gyakran ironikusan beszél, Stewie-vel jó barátok, bár gyakran szekálják egymást.</td>
+    <td headers=""six picture"><img src="http://users.atw.hu/ffamilyguy/images/600full-brian-griffin.jpg" alt="Brian"></td>
     </tr>
   </tbody>
 </table>
