--- a/familyguy.html
+++ b/familyguy.html
@@ -82,7 +82,7 @@ th,td
     <th id="six" scope="row" headers="empty">6</th>
     <td headers="six name">Brian Griffin</td>
     <td headers="six description" class="other">A Griffin család beszélni képes talált kutyája, a család talán legintelligensebb tagja. Gyakran ironikusan beszél, Stewie-vel jó barátok, bár gyakran szekálják egymást.</td>
-    <td headers=""six picture"><img src="http://users.atw.hu/ffamilyguy/images/600full-brian-griffin.jpg" alt="Brian"></td>
+    <td headers="six picture"><img src="http://users.atw.hu/ffamilyguy/images/600full-brian-griffin.jpg" alt="Brian"></td>
     </tr>
   </tbody>
 </table>
