--- a/kemenysepro.html
+++ b/kemenysepro.html
@@ -44,22 +44,22 @@
     </tr>
      <tr>
        <th id="notgas" rowspan="2" scope="row">Nem túlnyomásos gázkészülék(Kw)</th>
-       <th id="szazhatvan" headers="kemeny">&empty;160</th>
-       <td headers="notgas szazhatvan five">40</td>
-       <td headers="notgas szazhatvan six">43</td>
-       <td headers="notgas szazhatvan seven">46</td>
-       <td headers="notgas szazhatvan eight">49</td>
-       <td headers="notgas szazhatvan nine">49</td>
-       <td headers="notgas szazhatvan ten">49</td>
+       <th id="szh" headers="kemeny">&empty;160</th>
+       <td headers="notgas szh five">40</td>
+       <td headers="notgas szh six">43</td>
+       <td headers="notgas szh seven">46</td>
+       <td headers="notgas szh eight">49</td>
+       <td headers="notgas szh nine">49</td>
+       <td headers="notgas szh ten">49</td>
     </tr>
     <tr>
-      <th id="ketszaz" headers="kemeny">&empty;200</th>
-      <td header="notgas ketszaz five">70</td>
-      <td headers="notgas ketszaz six">75</td>
-      <td headers="notgas ketszaz seven">80</td>
-      <td headers="notgas ketszaz eight">85</td>
-      <td headers="notgas ketszaz nine">85</td>
-      <td headers="notgas ketszaz ten">85</td>
+      <th id="ksz" headers="kemeny">&empty;200</th>
+      <td headers="notgas ksz five">70</td>
+      <td headers="notgas ksz six">75</td>
+      <td headers="notgas ksz seven">80</td>
+      <td headers="notgas ksz eight">85</td>
+      <td headers="notgas ksz nine">85</td>
+      <td headers="notgas ksz ten">85</td>
     </tr>
   </tbody>
 </table>
